# WinderEngine

./: .gitignore  CmakeLists.txt  LICENSE  README.md  build.bat  build.sh
content/: splashes.txt
engine/: CMakeLists.txt
engine/source/Animation/: Animator.h
engine/source/Character/: Character.cpp  Character.h
engine/source/Core/: Constants.h  InteractProbe.h  Interactable.h  Object.h
engine/source/Engine/: Engine.cpp  Engine.h
engine/source/Player/: Player.cpp  Player.h
engine/source/Rooms/: BaseRoom.cpp  BaseRoom.h
engine/source/Sounds/: SoundManager.cpp  SoundManager.h
engine/source/Tables/: CharacterStats.h  CharacterTable.cpp  CharacterTable.h
engine/source/Textures/: GameSprite.cpp  GameSprite.h
engine/source/UI/: GameText.cpp  GameText.h  StatBar.cpp  StatBar.h
notes/: cmake_notes.txt
source/: BaseGame.cpp  main.cpp
source/Character/: Character.cpp  Character.h
source/Core/: Constants.h  Object.h
source/Engine/: Engine.cpp  Engine.h
source/Game/: BaseGameEngine.cpp  BaseGameEngine.h
source/Player/: Player.cpp  Player.h
source/Sounds/: SoundManager.cpp  SoundManager.h
source/Textures/: GameSprite.h
source/UI/: GameText.cpp  GameText.h
